--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "phaser": "^3.55.2",
     "phaser3-rex-plugins": "^1.1.64"
   }
